# opiqo-windows

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  FileWriter.cpp  Implementation-Android.md  Implementation-gtk2.md  Implementation-gtk3.md  Implementation-gtk4.md  Implementation-xlib.md  Implementation.md  LV2Plugin.hpp  LiveEffectEngine.cpp  LiveEffectEngine.h  Makefile  Plan.md  Readme.md  UI.md  WASAPI.md  app.rc  cmake_install.cmake  err  installer.nsi  jni_bridge.cpp  logging_macros.h  lv2_ringbuffer.h  opiqo.md
docs/: Debug.md  Pro.md  UI.md  auto-detect-defaults.md  gx_amp_crash.md  milestone-1.md  milestone-10.md  milestone-11.md  milestone-12.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md  milestone-7.md  milestone-8.md  milestone-9.md
include/zix/: btree.h  tree.h
include/zix-0/zix/: hash.h
issues/: 27.md  28.md  32.md  33.md
libs/: libopusenc.la
libs/cmake/SndFile/: SndFileConfig.cmake  SndFileTargets.cmake
libs/pkgconfig/: libopusenc.pc  lilv-0.pc  lv2.pc  serd-0.pc  sndfile.pc  sord-0.pc  sratom-0.pc  zix-0.pc
src/: FileWriter.h  LV2Plugin.hpp  LiveEffectEngine.cpp  LiveEffectEngine.h  LockFreeQueue.cpp  LockFreeQueue.h  arch.h  logging_macros.h  lv2_ringbuffer.h  main.cpp  main_win32.cpp  utils.h
src/win32/: AppSettings.cpp  AppSettings.h  AudioEngine.cpp  AudioEngine.h  ControlBar.cpp  ControlBar.h  MainWindow.cpp  MainWindow.h  ParameterPanel.cpp  ParameterPanel.h  PluginDialog.cpp  PluginDialog.h  PluginSlot.cpp  PluginSlot.h  SettingsDialog.cpp  SettingsDialog.h  UpgradeDialog.cpp  UpgradeDialog.h  WasapiDeviceEnum.cpp  WasapiDeviceEnum.h  app.rc  app.rc.in  opiqo.manifest  resource.h  totp.hpp  win_logging.cpp  win_logging.h
